<resources>
    <string name="app_name">Поиск по контрагенту</string>
    <string name="hint_text">Введите ИНН или ОГРН</string>
    <string name="error_loading">Во время загрузки произошла ошибка</string>
    <string name="kpp_label">КПП</string>
    <string name="ogrn_label">ОГРН</string>
    <string name="okved_label">ОКВЭД</string>
    <string name="okved_code_label">Код</string>
    <string name="okved_version_list_label">Версия справочника</string>
    <string name="management_label">Руководитель</string>
    <string name="management_fio_label">ФИО</string>
    <string name="management_post_label">Должность</string>
    <string name="favorite">favorite</string>
    <string name="error">Ошибка</string>
    <string name="recent">Recent</string>
    <string name="recent_search">Поиск</string>
    <string name="search_title">Поиск</string>
    <string name="recent_title">Избранное</string>
    <string name="detail_share">Поделиться</string>
    <string name="detail_title">Детальная информация</string>
    <string name="detail_map">Показать на карте</string>
    <string name="map_title">Местоположение</string>
    <string name="inn_label">ИНН</string>
    <string name="action_settings">Настройки</string>
    <string name="registration_date_label">Дата регистрации</string>
    <string name="opf_label">ОПФ</string>
    <string name="opf_code_label">Код</string>
    <string name="opf_type_label">Тип</string>
    <string name="delete">Удалить</string>
</resources>
