<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.isharipov.counterpartyfinder.ui.detail.DetailActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scroll_detail_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/name_detail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/favorite"
                android:foreground="?selectableItemBackground"
                android:src="@drawable/ic_bookmark_border_gray_24dp"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/address_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_detail" />

            <TextView
                android:id="@+id/name_full_with_opf_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="#94989e"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_detail" />

            <TextView
                android:id="@+id/branch_type_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_full_with_opf_value" />

            <TextView
                android:id="@+id/inn_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/inn_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toStartOf="@+id/kpp_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/branch_type_value" />

            <TextView
                android:id="@+id/kpp_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/kpp_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/inn_label"
                app:layout_constraintTop_toBottomOf="@+id/branch_type_value" />


            <TextView
                android:id="@+id/inn_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="@id/inn_label"
                app:layout_constraintTop_toBottomOf="@+id/inn_label" />

            <TextView
                android:id="@+id/kpp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="@id/kpp_label"
                app:layout_constraintTop_toBottomOf="@+id/kpp_label" />

            <TextView
                android:id="@+id/ogrn_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ogrn_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kpp_value" />

            <TextView
                android:id="@+id/ogrn_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ogrn_label" />

            <TextView
                android:id="@+id/registration_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/registration_date_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ogrn_value" />

            <TextView
                android:id="@+id/registration_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registration_date_label" />

            <TextView
                android:id="@+id/organization_status_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toEndOf="@id/registration_date_value"
                app:layout_constraintTop_toBottomOf="@+id/registration_date_label" />

            <TextView
                android:id="@+id/okved_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/okved_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registration_date_value" />

            <TextView
                android:id="@+id/okved_code_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/okved_code_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                app:layout_constraintEnd_toStartOf="@+id/okved_type_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/okved_label" />


            <TextView
                android:id="@+id/okved_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/okved_version_list_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/okved_code_label"
                app:layout_constraintTop_toBottomOf="@+id/okved_label" />

            <TextView
                android:id="@+id/okved_code_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="@+id/okved_code_label"
                app:layout_constraintTop_toBottomOf="@+id/okved_code_label" />

            <TextView
                android:id="@+id/okved_type_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="@+id/okved_type_label"
                app:layout_constraintTop_toBottomOf="@+id/okved_type_label" />

            <TextView
                android:id="@+id/opf_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/opf_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/okved_code_value" />

            <TextView
                android:id="@+id/opf_code_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/opf_code_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                app:layout_constraintEnd_toStartOf="@+id/okved_type_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/opf_label" />


            <TextView
                android:id="@+id/opf_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/opf_type_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/opf_code_label"
                app:layout_constraintTop_toBottomOf="@+id/opf_label" />

            <TextView
                android:id="@+id/opf_code_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="@+id/opf_code_label"
                app:layout_constraintTop_toBottomOf="@+id/opf_code_label" />

            <TextView
                android:id="@+id/opf_type_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="@+id/opf_type_label"
                app:layout_constraintTop_toBottomOf="@+id/opf_type_label" />

            <TextView
                android:id="@+id/management_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/management_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/opf_code_value" />

            <TextView
                android:id="@+id/management_fio_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/management_fio_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/management_label" />

            <TextView
                android:id="@+id/management_fio_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/management_fio_label" />

            <TextView
                android:id="@+id/management_post_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/management_post_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/management_fio_value" />

            <TextView
                android:id="@+id/management_post_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/management_post_label" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
